--- a/addons/icofr/views/finding_views.xml
+++ b/addons/icofr/views/finding_views.xml
@@ -77,6 +77,24 @@
                         <page string="Rencana Tindakan">
                             <field name="action_plan_ids"/>
                         </page>
+                        <page string="Kertas Kerja DoD (Lampiran 10)">
+                            <p class="text-info">
+                                Gunakan checklist ini untuk menentukan tingkat defisiensi berdasarkan Gambar 5 (AS 2201) Juknis BUMN.
+                            </p>
+                            <group>
+                                <group string="Tahap 1: Hubungan &amp; Likelihood">
+                                    <field name="box_1_direct_relation"/>
+                                    <field name="box_2_likelihood" invisible="not box_1_direct_relation"/>
+                                    <field name="box_3_magnitude" invisible="not box_2_likelihood"/>
+                                </group>
+                                <group string="Tahap 2: Signifikansi &amp; Mitigasi">
+                                    <field name="box_4_important"/>
+                                    <field name="box_5_compensating"/>
+                                    <field name="box_6_prudent_official"/>
+                                    <field name="box_7_aggregate"/>
+                                </group>
+                            </group>
+                        </page>
                         <page string="Rekomendasi">
                             <field name="recommendation"/>
                         </page>
