--- a/addons/icofr/views/finding_group_views.xml
+++ b/addons/icofr/views/finding_group_views.xml
@@ -18,6 +18,9 @@
                     <group>
                         <group>
                             <field name="fiscal_year"/>
+                            <field name="grouping_basis"/>
+                            <field name="impacted_fsli_id" invisible="grouping_basis != 'account'"/>
+                            <field name="coso_principle_id" invisible="grouping_basis != 'coso'" domain="[('is_sub_element', '=', True)]"/>
                             <field name="company_id"/>
                         </group>
                         <group>
